@@ -48,7 +48,7 @@ all package install:
 	@echo "You can get a current GNU Make via http://www.gnu.org/software"
 	@echo 
 	@echo "If upgrading is impossible, try modifying GNUMakefile and "
-	@echo "Makefile.common to replace \$(CURDIR) with \$(shell /bin/pwd) "
+	@echo "common.mk to replace \$(CURDIR) with \$(shell /bin/pwd) "
 else
 
 
@@ -103,7 +103,7 @@ $(PROG_SUBDIRS:%=%/all): lib/all $(SUPPORT_SUBDIRS:%=%/all)
 OMIT_CONFIG_RULE = 1
 OMIT_VERSION_H_RULE = 1
 OMIT_INTTYPES_RULE = 1
-include $(SRCDIR)/Makefile.common
+include $(SRCDIR)/common.mk
 
 $(BUILDDIR)/Makefile.config: $(SRCDIR)/Makefile.config.in
 	$(SRCDIR)/configure $(SRCDIR)/Makefile.config.in
@@ -131,7 +131,7 @@ pm_config.h: \
   $(SRCDIR)/pm_config.in.h Makefile.config inttypes_netpbm.h \
   $(ENDIANGEN)
 # Note that this rule depends on the effect of the .DELETE_ON_ERROR
-# target we get from Makefile.common
+# target we get from common.mk
 	echo '/* pm_config.h GENERATED BY A MAKE RULE */' >$@
 	echo '#ifndef PM_CONFIG_H' >>$@
 	echo '#define PM_CONFIG_H' >>$@
